--- a/public/less/icon-style.css
+++ b/public/less/icon-style.css
@@ -1,4 +1,21 @@
-.euiNavDrawerGroup__item .euiListGroupItem__icon.euiImage {
-  max-width: 18px;
+.euiNavDrawerGroup__item .euiListGroupItem__button .euiImage {
   left: -1px;
+  max-width: 18px;
+}
+
+.euiNavDrawerGroup__item .euiListGroupItem__button .euiImage img{
+  height: 18px;
+  width: 18px;
+}
+
+.euiNavDrawer:not(.euiNavDrawer-isExpanded) .euiNavDrawerGroup__item .euiListGroupItem__button .euiListGroupItem__label {
+  display: none;
+}
+
+.euiNavDrawer:not(.euiNavDrawer-isExpanded) .euiNavDrawerGroup__item .euiListGroupItem__button .euiImage {
+  margin-right: 0!important;
+}
+
+.euiNavDrawer .euiNavDrawerGroup__item .euiListGroupItem__button .euiImage {
+  margin-right: 10px;
 }
